--- a/app/src/main/res/layout/weather_layout.xml
+++ b/app/src/main/res/layout/weather_layout.xml
@@ -33,7 +33,7 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
-        android:background="#27A5F9">
+        android:background="@mipmap/weather_bg">
     <TextView
         android:id="@+id/publish_text"
         android:layout_width="wrap_content"
@@ -54,8 +54,9 @@
             android:layout_width="wrap_content"
             android:layout_height="40dp"
             android:gravity="center"
+            android:layout_gravity="center_horizontal"
             android:textColor="#FFF"
-            android:textSize="18sp" />
+            android:textSize="30sp" />
         <TextView
             android:id="@+id/weather_desp"
             android:layout_width="wrap_content"
@@ -63,12 +64,14 @@
             android:layout_gravity="center_horizontal"
             android:gravity="center"
             android:textColor="#FFF"
-            android:textSize="40sp" />
+            android:textSize="40sp"
+            android:layout_marginTop="10dp"/>
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="60dp"
             android:layout_gravity="center_horizontal"
-            android:orientation="horizontal" >
+            android:orientation="horizontal"
+            android:layout_margin="4dp">
         <TextView
             android:id="@+id/temp1"
             android:layout_width="wrap_content"
