--- a/app/src/main/res/layout/choose_area.xml
+++ b/app/src/main/res/layout/choose_area.xml
@@ -9,5 +9,5 @@
             android:textColor="@color/title_text_color" android:textSize="24sp" />
     </RelativeLayout>
     <ListView android:id="@+id/area_list_view" android:layout_width="match_parent"
-        android:layout_height="match_parent"></ListView>
+        android:layout_height="match_parent" android:background="@color/listView_bg"></ListView>
 </LinearLayout>
