--- a/app/src/main/res/layout/weather_layout.xml
+++ b/app/src/main/res/layout/weather_layout.xml
@@ -41,7 +41,7 @@
         android:layout_alignParentRight="true"
         android:layout_marginRight="10dp"
         android:layout_marginTop="10dp"
-        android:textColor="#FFF"
+        android:textColor="#000"
         android:textSize="18sp" />
         <LinearLayout
             android:id="@+id/weather_info_layout"
@@ -60,15 +60,15 @@
         <TextView
             android:id="@+id/weather_desp"
             android:layout_width="wrap_content"
-            android:layout_height="60dp"
+            android:layout_height="70dp"
             android:layout_gravity="center_horizontal"
             android:gravity="center"
             android:textColor="#FFF"
-            android:textSize="40sp"
+            android:textSize="50sp"
             android:layout_marginTop="10dp"/>
         <LinearLayout
             android:layout_width="wrap_content"
-            android:layout_height="60dp"
+            android:layout_height="80dp"
             android:layout_gravity="center_horizontal"
             android:orientation="horizontal"
             android:layout_margin="4dp">
@@ -78,7 +78,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
             android:textColor="#FFF"
-            android:textSize="40sp" />
+            android:textSize="60sp" />
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -87,14 +87,14 @@
             android:layout_marginRight="10dp"
             android:text="~"
             android:textColor="#FFF"
-            android:textSize="40sp" />
+            android:textSize="60sp" />
             <TextView
                 android:id="@+id/temp2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
                 android:textColor="#FFF"
-                android:textSize="40sp" />
+                android:textSize="60sp" />
         </LinearLayout>
         </LinearLayout>
     </RelativeLayout>
