--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,7 @@
     <color name="colorAccent">#FF4081</color>
     <color name="choose_area_bg">#484E61</color>
     <color name="title_text_color">#fff</color>
+    <color name="welcome_bg">#F4A460</color>
+    <color name="icon_text">#4876FF</color>
+    <color name="listView_bg">#BFEFFF</color>
 </resources>
